--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,6 +3,7 @@ body{
     display: block;
     height: 100%;
     width: 100%;
+    overflow: hidden;
     .field{
         display: block;
         height: 100%;
@@ -177,6 +178,7 @@ body{
 }
 @media(max-width : 913px){
     body{
+        overflow: hidden;
         .field{
             display: block;
             height: 100vh;
@@ -282,6 +284,7 @@ body{
 }
 @media(max-width : 415px){
     body{
+        overflow: hidden;
         .field{
             display: block;
             height: 100vh;
@@ -294,7 +297,7 @@ body{
                top: 30%;
                left: 7vw;
                transform: translate(-50%, -50%);
-               width: 80%;
+               width: 70%;
                background: #FFFFFF;
                border-radius: 3%;
                #myChart{
@@ -304,14 +307,14 @@ body{
             }
         }
         .controll{
-            height: 40%;
+            height: 45%;
             width: 100%;
-            top: 60%;
+            top: 55%;
             left: 0%;
             border-radius: 2vw 2vw 0vw 0%;
             .controll_block{
                 width: 100%;
-                height: 75%;
+                height: 60%;
                 padding: 5% 0;
                 .title{
                     width: 66%;
@@ -340,7 +343,7 @@ body{
                     }
                     .slider_slider{
                         width: 66%;
-                        height: 4%;
+                        height: 15%;
                         margin: 0.3% auto 0 auto;
                         line-height: 100%;
                         position: absolute;
@@ -353,7 +356,7 @@ body{
                             font-size: 1.5vh;
                         }
                         #fader_first, #fader_second{
-                            height: 0.1vw;
+                            height: 1vw;
                             &::-webkit-slider-thumb{
                                 width: 3vw;
                                 height: 3vw;
@@ -368,7 +371,7 @@ body{
                 }
             }
             .controll_power{
-                height: 30%;
+                height: 40%;
                 input[type="checkbox"]{
                     &::after{
                         display: none;
