--- a/scss/index.scss
+++ b/scss/index.scss
@@ -294,7 +294,7 @@ body{
             position: relative;
             .chart{
                position: absolute;
-               top: 30%;
+               top: 25%;
                left: 7vw;
                transform: translate(-50%, -50%);
                width: 70%;
@@ -307,11 +307,12 @@ body{
             }
         }
         .controll{
-            height: 45%;
+            height: 100%;
             width: 100%;
             top: 55%;
             left: 0%;
             border-radius: 2vw 2vw 0vw 0%;
+            position: absolute;
             .controll_block{
                 width: 100%;
                 height: 60%;
@@ -371,6 +372,8 @@ body{
                 }
             }
             .controll_power{
+                position: absolute;
+                top: 15vh;
                 height: 40%;
                 input[type="checkbox"]{
                     &::after{
